<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_person_details"
        android:fillViewport="true"
        tools:context=".details.PersonDetailsActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_16dp_"
            android:paddingRight="@dimen/_16dp_"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_14dp_"
            android:layout_height="wrap_content">


        <TextView
                android:layout_width="match_parent"
                tools:text="Luke Skywalker"
                android:id="@+id/nameTv"
                android:layout_marginTop="@dimen/_14dp_"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/name_label"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="19BBY"
                android:id="@+id/birthYearTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/birth_year_label"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="172cm"
                android:id="@+id/heightTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:text="@string/height_label"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>


        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="Human"
                android:id="@+id/specieNameTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:text="@string/specie_name_label"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="Galactic Basic"
                android:id="@+id/languageTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/language_label"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="Tatooine"
                android:id="@+id/homeworldTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/home_world"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:layout_marginBottom="@dimen/_10dp_"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="200000"
                android:id="@+id/populationTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/population_label"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:layout_marginBottom="@dimen/_10dp_"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:background="@color/divider_color"
              android:layout_marginTop="@dimen/_7dp_"
              android:layout_marginBottom="@dimen/_7dp_"
              android:layout_height="@dimen/divider_height"/>

        <TextView
                android:layout_width="match_parent"
                tools:text="200000"
                android:id="@+id/filmsTv"
                android:textSize="@dimen/primary_list_item_text_size"
                android:layout_marginBottom="@dimen/_5dp_"
                android:textColor="@color/primaryTextColor"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/secondary_list_item_text_size"
                android:text="@string/films_label"
                android:layout_marginBottom="@dimen/_10dp_"
                android:textColor="@color/secondaryTextColor"
                android:layout_height="wrap_content"/>


    </LinearLayout>


</ScrollView>